--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ section {
 
 .section-title {
     font-size: 55px;
+    border-bottom: 3px solid;
     color: #024e76;
     padding-bottom: 20px;
     text-align: center;
